--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>To-Do List</title>
+    <title>TodoList</title>
     <link
       href="https://fonts.googleapis.com/css?family=Poppins&display=swap"
       rel="stylesheet"
@@ -19,7 +19,7 @@
   <body>
       <header>
           <h1>
-              My To Do List
+              Your To Do List
           </h1>
       </header>
       <form>
