--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
       <header>
           <h1>
-              Your To Do List
+              To Do List
           </h1>
       </header>
       <form>
