--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <ul class="todo-list"></ul>
       </div>
     <!-- <header>
-      <h1>Ed's Todo List</h1>
+      <h1>Todo List</h1>
     </header>
     <form>
       <input type="text" class="todo-input" />
